--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@discord-nestjs/core": "^5.3.7",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "axios": "^1.4.0",
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1",
     "envalid": "^7.3.1",
