--- a/package.json
+++ b/package.json
@@ -14,17 +14,20 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
+    "@discord-nestjs/common": "^5.2.5",
     "@discord-nestjs/core": "^5.3.7",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "axios": "^1.4.0",
+    "class-transformer": "^0.5.1",
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1",
     "envalid": "^7.3.1",
     "nestjs-envalid": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
