--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@discord-nestjs/common": "^5.2.5",
     "@discord-nestjs/core": "^5.3.7",
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.16.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "axios": "^1.4.0",
@@ -24,9 +26,11 @@
     "dotenv": "^16.3.1",
     "envalid": "^7.3.1",
     "nestjs-envalid": "^1.0.0",
+    "play-dl": "^1.9.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "tweetnacl": "^1.0.3",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
