--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 BOT_TOKEN = 
 YOUTUBE_API_KEY = 
 YOUTUBE_CHANNEL_ID = UCANCsbie9EorvBNWfpVntGQ # Armağan Amcalar: https://www.youtube.com/@ArmaganAmcalar
-DATABASE_URI = mongodb://localhost:27017/nimble-bot
+DATABASE_URI = mongodb://localhost:27017/nimble-bot # localhost
