feat: add logger module

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ YOUTUBE_API_KEY =
 YOUTUBE_CHANNEL_ID = UCANCsbie9EorvBNWfpVntGQ # Armağan Amcalar: https://www.youtube.com/@ArmaganAmcalar
 DATABASE_URI = mongodb://localhost:27017/nimble-bot # localhost
 PORT = 
+LOGTAIL_SOURCE_TOKEN = 
