--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "author": "Can Çevik <mazlumcancevik@gmail.com>",
   "license": "MIT",
-  "engines": { "node": "16.x" },
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -19,6 +21,8 @@
     "@discord-nestjs/core": "^5.3.7",
     "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.16.0",
+    "@logtail/node": "^0.4.0",
+    "@logtail/winston": "^0.4.1",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/mongoose": "^10.0.0",
@@ -28,12 +32,14 @@
     "dotenv": "^16.3.1",
     "envalid": "^7.3.1",
     "mongoose": "^7.3.1",
+    "nest-winston": "^1.9.3",
     "nestjs-envalid": "^1.0.0",
     "play-dl": "^1.9.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "tweetnacl": "^1.0.3"
+    "tweetnacl": "^1.0.3",
+    "winston": "^3.9.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
