--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+NODE_ENV = development
 BOT_TOKEN = 
 YOUTUBE_API_KEY = 
 YOUTUBE_CHANNEL_ID = UCANCsbie9EorvBNWfpVntGQ # Armağan Amcalar: https://www.youtube.com/@ArmaganAmcalar
